# Azure-AI-OCR

./: .gitignore  exe_azure.py  gpt.py  gpt_base64.py  main.py  output.md  output_base64.md  pyproject.toml  sharedservice.py  split_pdf.py
outputs/: NYSE_ETN_2023_extracted.xlsx  UBS_AG_Standalone_2024_extracted.xlsx
